[tool.poetry]
name = "byte-server"
version = "0.1.0"
description = "FastAPI backend for Byte app (Ollama-powered quiz generator)"
authors = ["Abodunrin Abdulsalam <abdulsalamabodunrin369@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.6.0"
pydantic-settings = "^2.3.0"
ollama = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
